bsparser.c
/*
* Copyright 2022 Rochus Keller <mailto:me@rochus-keller.ch>
*
* This file is part of the BUSY build system.
*
* The following is the license that applies to this copy of the
* application. For a license to use the application under conditions
* other than those described here, please email to me@rochus-keller.ch.
*
* GNU General Public License Usage
* This file may be used under the terms of the GNU General Public
* License (GPL) versions 2.0 or 3.0 as published by the Free Software
* Foundation and appearing in the file LICENSE.GPL included in
* the packaging of this file. Please review the following information
* to ensure GNU General Public Licensing requirements will be met:
* http://www.fsf.org/licensing/licenses/info/GPLv2.html and
* http://www.gnu.org/copyleft/gpl.html.
*/

// It's actually not only a parser, but it also directly interprets the syntax with no full AST.

#include "bsparser.h"
#include "bslex.h" 
#include "bshost.h"
#include "bsunicode.h"
#include <memory.h>
#include <assert.h>
#include <stdlib.h>
#include <stdio.h>
#include <ctype.h>
#include "lauxlib.h"
#include <stdarg.h>

typedef enum BS_ParseArgs { BS_PathToSourceRoot = 1, BS_NewModule, BS_Params } BS_ParseArgs;

typedef struct BSScope {
    int table; // index to table on the stack
    int n; // number of ordered items
} BSScope;

typedef struct BSParserContext {
    BSHiLex* lex;
    BSScope module;
    const char* dirpath;  // normalized absolute path to current dir
    const char* label; // pointer to internal of dirpath to display in error messages
    const char* filepath; // normalized absolute path to BUSY in current dir
    unsigned builtins : 8;
    unsigned skipMode : 1; // when on, read over tokens without executing
    unsigned locInfo : 1;  // when on, add #row, #col and #file to AST elements
    unsigned fullAst : 1;  // when on, also add AST statement and expression elements
    unsigned numRefs : 8;  // optional index a weak #refs table pointing to all objects with identdef
    unsigned xref : 8;     // optional index to xref table or 0; if a table is present, build bi-dir xref
    lua_State* L;
    BSLogger logger;
    void* loggerData;
} BSParserContext;

static BSToken nextToken(BSParserContext* ctx)
{
    return bslex_hnext(ctx->lex);
}

static BSToken peekToken(BSParserContext* ctx, int off ) // off = 1..
{
    return bslex_hpeek(ctx->lex,off);
}

typedef struct BSIdentDef {
    const char* name;
    int len;
    int visi; // BSVisibility
    BSRowCol loc;
} BSIdentDef;

static void printLexerStack(BSParserContext* ctx)
{
    int i = bslex_hlevelcount(ctx->lex) - 2;
    while(i >= 0)
    {
        BSToken level = bslex_hlevel(ctx->lex,i);
        BSRowCol loc;
        loc.row = level.loc.row;
        loc.col = level.loc.col;
        va_list args;
        va_end(args);
        ctx->logger(BS_Error, ctx->loggerData,level.source,loc, "    instantiated from here", args );
        i--;
    }
}

static void error(BSParserContext* ctx, int row, int col, const char* format, ... )
{
    BSRowCol loc;
    loc.row = row;
    loc.col = col;
    va_list args;
    va_start(args, format);
    ctx->logger(BS_Error, ctx->loggerData,bslex_hfilepath(ctx->lex),loc, format, args );
    va_end(args);
    printLexerStack(ctx);
    lua_pushnil(ctx->L);
    lua_error(ctx->L);
}

static void warning(BSParserContext* ctx, int row, int col, const char* format, ... )
{
    BSRowCol loc;
    loc.row = row;
    loc.col = col;
    va_list args;
    va_start(args, format);
    ctx->logger(BS_Warning, ctx->loggerData,bslex_hfilepath(ctx->lex),loc, format, args );
    va_end(args);
}

static void message(BSParserContext* ctx, const char* format, ... )
{
    BSRowCol loc;
    loc.row = 0;
    loc.col = 0;
    va_list args;
    va_start(args, format);
    ctx->logger(BS_Info, ctx->loggerData,0,loc, format, args );
    va_end(args);
}

static void debugprint(BSLogger out, void* data, const char* format, ... )
{
    BSRowCol loc;
    loc.row = 0;
    loc.col = 0;
    va_list args;
    va_start(args, format);
    out(BS_Debug, data,0,loc, format, args );
    va_end(args);
}

static void unexpectedToken(BSParserContext* ctx, BSToken* t, const char* where)
{
    error(ctx,t->loc.row, t->loc.col,"unexpected token %s: %s", where, bslex_tostring(t->tok) );
}

#define BS_BEGIN_LUA_FUNC(ctx,diff) const int $stack = lua_gettop((ctx)->L) + diff
#define BS_END_LUA_FUNC(ctx) int $end = lua_gettop((ctx)->L); assert($stack == $end)

static void dumpimp(lua_State* L, int index, BSLogger out, void* data, const char* title)
{
    if( index <= 0 )
        index += lua_gettop(L) + 1;
    if( title && *title != 0 )
        debugprint(out,data,title);
    switch( lua_type(L,index) )
    {
    case LUA_TNIL:
        debugprint(out,data,"nil");
        break;
    case LUA_TBOOLEAN:
        debugprint(out,data,"bool %d",lua_toboolean(L,index));
        break;
    case LUA_TNUMBER:
        if( ( (int)lua_tonumber(L,index) - lua_tonumber(L,index) ) == 0.0 )
            debugprint(out,data,"int %d",lua_tointeger(L,index));
        else
            debugprint(out,data,"number %f",lua_tonumber(L,index));
        break;
    case LUA_TSTRING:
        debugprint(out,data,"string \"%s\"",lua_tostring(L,index));
        break;
    case LUA_TTABLE:
        debugprint(out,data,"*** table: %p", lua_topointer(L,index));
        if( lua_getmetatable(L,index) )
        {
            debugprint(out,data,"  metatable %p", lua_topointer(L,-1));
            lua_pop(L,1);
        }
        lua_pushnil(L);  /* first key */
        while (lua_next(L, index) != 0) {
            const int key = lua_gettop(L)-1;
            const int value = lua_gettop(L);
            if( lua_type(L,key) == LUA_TTABLE )
                lua_pushfstring(L,"table %p", lua_topointer(L,key));
            else
                lua_pushvalue(L,key);
            if( lua_type(L,value) == LUA_TTABLE )
                lua_pushfstring(L,"table %p", lua_topointer(L,value));
            else
                lua_pushvalue(L,value);
            debugprint(out,data,"  %s = %s", lua_tostring(L,-2), lua_tostring(L,-1));
            lua_pop(L, 3);
        }
        break;
    case LUA_TFUNCTION:
        debugprint(out,data,"function %p",lua_topointer(L,index));
        break;
    default:
        debugprint(out,data,"<lua value>");
        break;
    }
}


static void dump(BSParserContext* ctx, int index)
{
    BS_BEGIN_LUA_FUNC(ctx,0);
    dumpimp(ctx->L,index,ctx->logger,ctx->loggerData,0);
    BS_END_LUA_FUNC(ctx);
}

static void dump2(BSParserContext* ctx, const char* title, int index)
{
    BS_BEGIN_LUA_FUNC(ctx,0);
    dumpimp(ctx->L,index,ctx->logger,ctx->loggerData,title);
    BS_END_LUA_FUNC(ctx);
}


static void checkUnique(BSParserContext* ctx, BSScope* scope, BSIdentDef* id )
{
    lua_pushlstring(ctx->L,id->name,id->len);
    const char* name = lua_tostring(ctx->L,-1);
    lua_rawget(ctx->L,scope->table);
    const int isnil = lua_isnil(ctx->L,-1);
    lua_pop(ctx->L,1);
    if( !isnil )
        error(ctx,id->loc.row, id->loc.col,"name is not unique in scope: '%s'", name );
}

static void addLocInfo(BSParserContext* ctx, BSRowCol loc, int table)
{
    if( ctx->locInfo )
    {
        lua_pushinteger(ctx->L, loc.row );
        lua_setfield(ctx->L, table, "#row");
        lua_pushinteger(ctx->L, loc.col );
        lua_setfield(ctx->L, table, "#col");
        lua_getfield(ctx->L, ctx->module.table,"#file");
        lua_setfield(ctx->L,table,"#file");
    }
}

enum { ROW_BIT_LEN = 19, COL_BIT_LEN = 32 - ROW_BIT_LEN };
unsigned int bs_torowcol(int row, int col)
{
    return ( row << COL_BIT_LEN ) | ( col & ( ( 1 << COL_BIT_LEN ) -1 ));
}

static void addXref(BSParserContext* ctx, BSRowCol loc, int decl)
{
    if( !ctx->xref )
        return;

    const int top = lua_gettop(ctx->L);

    // #xref table: filepath -> list_of_idents
    // list_of_idents: rowcol -> set_of_decls

    // decl.#xref table: filepath -> set of rowcol

    lua_getfield(ctx->L, ctx->module.table, "#file");
    lua_rawget(ctx->L,ctx->xref);
    assert( lua_istable(ctx->L,-1) );
    const int list_of_idents = lua_gettop(ctx->L);

    const unsigned int rowCol = bs_torowcol(loc.row, loc.col);

    lua_pushinteger(ctx->L,rowCol);
    lua_rawget(ctx->L,list_of_idents);
    if( !lua_istable(ctx->L,-1) )
    {
        lua_pop(ctx->L,1); // nil
        lua_createtable(ctx->L,0,0);
        lua_pushinteger(ctx->L,rowCol);
        lua_pushvalue(ctx->L,-2);
        lua_rawset(ctx->L,list_of_idents);
    }
    const int set_of_decls = lua_gettop(ctx->L);
    assert( lua_istable(ctx->L,-1) );

    lua_pushvalue(ctx->L,decl);
    lua_pushboolean(ctx->L,1);
    lua_rawset(ctx->L,set_of_decls);

    lua_pop(ctx->L,2); // list_of_idents, set_of_decls

    lua_getfield(ctx->L, decl, "#xref");
    if( !lua_istable(ctx->L,-1) )
    {
        lua_pop(ctx->L,1); // nil
        lua_createtable(ctx->L,0,0);
        lua_pushvalue(ctx->L,-1);
        lua_setfield(ctx->L,decl, "#xref");
    }
    const int decl_xref = lua_gettop(ctx->L);

    lua_getfield(ctx->L, ctx->module.table, "#file");
    lua_rawget(ctx->L,decl_xref);
    if( !lua_istable(ctx->L,-1) )
    {
        lua_pop(ctx->L,1); // nil
        lua_createtable(ctx->L,0,0);
        lua_getfield(ctx->L, ctx->module.table, "#file");
        lua_pushvalue(ctx->L,-2);
        lua_rawset(ctx->L,decl_xref);
    }
    const int set_of_rowcol = lua_gettop(ctx->L);

    lua_pushinteger(ctx->L,rowCol);
    lua_pushboolean(ctx->L,1);
    lua_rawset(ctx->L, set_of_rowcol);

    lua_pop(ctx->L,2); // decl_xref, set_of_rowcol
    assert( top == lua_gettop(ctx->L));
}

static void addNumRef(BSParserContext* ctx, int obj)
{
    if( !ctx->numRefs )
        return;
    const int id = lua_objlen(ctx->L,ctx->numRefs) + 1;
    lua_pushvalue(ctx->L,obj);
    lua_rawseti(ctx->L,ctx->numRefs,id);
    lua_pushinteger(ctx->L,id);
    lua_setfield(ctx->L,obj,"#ref");
}

static BSIdentDef identdef(BSParserContext* ctx, BSScope* scope)
{
    BSToken t = nextToken(ctx);
    if( t.tok != Tok_ident )
        error(ctx, t.loc.row, t.loc.col , "expecting an ident");
    BSIdentDef res;
    res.name = t.val;
    res.len = t.len;
    res.loc = t.loc;
    checkUnique(ctx,scope,&res);
    t = peekToken(ctx,1);
    switch( t.tok )
    {
    case Tok_Bang:
        res.visi = BS_PublicDefault;
        nextToken(ctx);
        break;
    case Tok_Star:
        res.visi = BS_Public;
        nextToken(ctx);
        break;
    case Tok_Minus:
        res.visi = BS_Protected;
        nextToken(ctx);
        break;
    default:
        res.visi = BS_Private;
        break;
    }
    return res;
}

static void addToScope(BSParserContext* ctx, BSScope* scope, BSIdentDef* id, int table )
{
    BS_BEGIN_LUA_FUNC(ctx,0);

    lua_pushinteger(ctx->L,id->visi);
    lua_setfield(ctx->L,table,"#visi");

    lua_pushlstring(ctx->L,id->name, id->len);
    lua_setfield(ctx->L,table,"#name");

    lua_pushvalue(ctx->L,scope->table);
    lua_setfield(ctx->L,table,"#owner");

    lua_pushlstring(ctx->L,id->name, id->len);
    lua_pushvalue(ctx->L,table);
    lua_rawset(ctx->L,scope->table);

    lua_pushinteger(ctx->L, ++scope->n );
    lua_pushvalue(ctx->L,table);
    lua_rawset(ctx->L,scope->table);

    BS_END_LUA_FUNC(ctx);
}

static int expression(BSParserContext* ctx, BSScope* scope, int lhsType);
static void parampath(BSParserContext* ctx, const char* name, int len);

static int /*BSPathStatus*/ caclFsDir(BSParserContext* ctx, const char* path, int pathlen)
{
    BS_BEGIN_LUA_FUNC(ctx,1);

    lua_pushvalue(ctx->L, ctx->module.table);
    const int root = lua_gettop(ctx->L);
    lua_getfield(ctx->L,root,"^");
    while( !lua_isnil(ctx->L,-1) )
    {
        lua_replace(ctx->L,root);
        lua_getfield(ctx->L,root,"^");
    }
    lua_pop(ctx->L,1);
    lua_getfield(ctx->L,root,"#dir");
    lua_replace(ctx->L,root);

    if( *path != '/' )
    {
        // this is a relative path, either normalized or not

        // first calc the absolute path of the new subdir (to avoide ../ exhaution)
        lua_getfield(ctx->L,ctx->module.table,"#dir");
        if( *path != '.' )
        {
            // not yet normalized
            lua_pushstring(ctx->L,"./");
            lua_pushlstring(ctx->L,path,pathlen);
            lua_concat(ctx->L,2);
        }else
            lua_pushlstring(ctx->L,path,pathlen);
        // stack: root, #dir, relpath
        int res = bs_add_path(ctx->L, -2, -1);
        if( res != BS_OK )
        {
            lua_pop(ctx->L,3);
            return res;
        }
        // stack: root, #dir, relpath, abspath
        lua_replace(ctx->L,-3);
        lua_pop(ctx->L,1);
    }else
        lua_pushlstring(ctx->L,path,pathlen);

    // stack: root, abs submod fspath

    // now calc the relative path
    int res = bs_makeRelative(lua_tostring(ctx->L,-2),lua_tostring(ctx->L,-1));
    lua_pop(ctx->L,2);
    if( res == BS_OK )
        lua_pushstring(ctx->L, bs_global_buffer() );

    BS_END_LUA_FUNC(ctx);
    return res;
}

static void submodule(BSParserContext* ctx, int subdir)
{
    BS_BEGIN_LUA_FUNC(ctx,0);
    nextToken(ctx); // keyword
    BSIdentDef id = identdef(ctx,&ctx->module);
    lua_getfield(ctx->L,ctx->module.table,"#dummy");
    if( !lua_isnil(ctx->L,-1) )
    {
        va_list args;
        va_end(args);
        ctx->logger(BS_Error, ctx->loggerData,ctx->filepath,id.loc, "submod declarations not allowed here", args );
        lua_pushnil(ctx->L);
        lua_error(ctx->L);
    }else
        lua_pop(ctx->L,1);
    const char* path = id.name;
    int pathlen = id.len;
    if( id.visi == BS_PublicDefault )
        error(ctx, id.loc.row, id.loc.col,"'!' is not applicable here" );
    BSToken t = peekToken(ctx,1);
    BSToken pt = t;
    if( t.tok == Tok_Eq || t.tok == Tok_ColonEq )
    {
        nextToken(ctx); // eat '='
        t = nextToken(ctx);
        if( t.tok == Tok_path || t.tok == Tok_ident )
        {
            path = t.val;
            pathlen = t.len;
            pt = t;

            // We now support all paths (no necessity of source-tree and dir-tree correspondence)
            // #rdir is made of idents, not dir names
            // the following code is only for backward compatibility
            if( subdir )
            {
                if( t.tok == Tok_path )
                {
                    // check path is relative and only one level
                    if( *path == '\'' )
                    {
                        path++;
                        pathlen -= 2;
                    }
                    if( strncmp(path,"//",2) == 0 || strncmp(path,"..",2) == 0)
                        error(ctx, pt.loc.row, pt.loc.col,"this path is not supported here" );
                    if( strncmp(path,".",1) == 0 )
                    {
                        path += 2;
                        pathlen -= 2;
                    }
                    int i;
                    for( i = 0; i < pathlen; i++ )
                    {
                        if( path[i] == '/' )
                            error(ctx, pt.loc.row, pt.loc.col,"expecting an immediate subdirectory" );
                    }
                }
            }
        }else
            error(ctx, pt.loc.row, pt.loc.col,"expecting a path or an ident" );
        t = peekToken(ctx,1);
    }

    const char* altpath = 0;
    int altpathlen = 0;
    if( t.tok == Tok_else )
    {
        nextToken(ctx); // eat 'else'
        t = nextToken(ctx);
        if( t.tok == Tok_path )
        {
            altpath = t.val;
            altpathlen = t.len;
            pt = t;
        }else
            error(ctx, pt.loc.row, pt.loc.col,"expecting a path after 'else'" );

        t = peekToken(ctx,1);
    }

    if( t.tok == Tok_Lpar )
    {
        nextToken(ctx); // eat lpar
        t = peekToken(ctx,1);
        while( t.tok != Tok_Rpar && t.tok != Tok_Eof )
        {
            if( t.tok != Tok_ident )
                error(ctx, t.loc.row, t.loc.col,"expexting an identifier" );
            nextToken(ctx); // eat ident
            BSToken pname = t;
            parampath(ctx,id.name,id.len);
            lua_pop(ctx->L,1);
            lua_pushstring(ctx->L,".");
            lua_pushlstring(ctx->L,pname.val,pname.len);
            lua_concat(ctx->L,3);
            const int nm = lua_gettop(ctx->L);
            t = peekToken(ctx,1);
            if( t.tok == Tok_Eq || t.tok == Tok_ColonEq )
            {
                nextToken(ctx); // eat eq
                t = peekToken(ctx,1);
                expression(ctx,&ctx->module,0);
                lua_getfield(ctx->L,-1,"#kind");
                const int kind = lua_tointeger(ctx->L,-1);
                lua_pop(ctx->L,2); // type, kind
                if( kind != BS_BaseType )
                    error(ctx, t.loc.row, t.loc.col,"parameter value must be of basic type" );
                switch( lua_type(ctx->L,-1) )
                {
                case LUA_TBOOLEAN:
                    lua_pushstring(ctx->L, lua_toboolean(ctx->L,-1) ? "true" : "false");
                    lua_replace(ctx->L,-2);
                    break;
                case LUA_TNUMBER:
                    lua_pushstring(ctx->L, lua_tostring(ctx->L,-1));
                    lua_replace(ctx->L,-2);
                    break;
                case LUA_TSTRING:
                    break;
                }
                t = peekToken(ctx,1);
            }else
            {
                lua_pushstring(ctx->L,"true");
            }
            const int val = lua_gettop(ctx->L);
            // check if param is already set, otherwise set it
            lua_pushvalue(ctx->L,nm);
            lua_rawget(ctx->L,BS_Params);
            const int overridden = !lua_isnil(ctx->L,-1);
            lua_pop(ctx->L,1);
            if( overridden )
            {
                warning(ctx,pname.loc.row,pname.loc.col,"parameter %s is overridden by outer value", lua_tostring(ctx->L,nm));
                lua_pop(ctx->L,2); // nm, val
            }else
            {
                lua_createtable(ctx->L,0,0);
                lua_pushvalue(ctx->L,-2);
                lua_rawseti(ctx->L,-2,1); // the param value is a table which carries the value in index 1
                lua_replace(ctx->L,-2);
                // stack: nm, tables
                // because value is boxed in a table the module knows not to do visibility check
                lua_rawset(ctx->L,BS_Params);
            }
            if( t.tok == Tok_Comma )
            {
                nextToken(ctx); // eat comma
                t = peekToken(ctx,1);
            }
        }
        if( t.tok == Tok_Eof )
            error(ctx, t.loc.row, t.loc.col,"non-terminated module parameter list" );
        else
            nextToken(ctx); // eat rpar
    }

    lua_createtable(ctx->L,0,0); // module definition
    const int module = lua_gettop(ctx->L);
    lua_pushinteger(ctx->L, BS_ModuleDef);
    lua_setfield(ctx->L,-2,"#kind");
    lua_pushvalue(ctx->L,ctx->module.table);
    lua_setfield(ctx->L,-2,"^"); // set reference to outer scope
    addToScope(ctx, &ctx->module, &id, module ); // the outer module directly references this module, no adapter
    addXref(ctx, id.loc, module);

    lua_getfield(ctx->L,ctx->module.table,"#rdir");
    lua_pushstring(ctx->L,"/");
    lua_pushlstring(ctx->L,id.name,id.len);
    lua_pushvalue(ctx->L,-1);
    lua_setfield(ctx->L,module,"#dirname");
    lua_concat(ctx->L,3);
    lua_setfield(ctx->L,module,"#rdir"); // construct rdir from root by concatenating the subdir identdefs
    lua_pushinteger(ctx->L,id.loc.row);
    lua_setfield(ctx->L,module,"#row");
    lua_pushinteger(ctx->L,id.loc.col);
    lua_setfield(ctx->L,module,"#col");

    if( altpath )
    {
        if( *altpath == '/' )
            lua_pushlstring(ctx->L,altpath,altpathlen); // this is already an absolute path
        else if( *altpath == '.' )
        {
            // already normalized
            lua_getfield(ctx->L,ctx->module.table,"#dir");
            lua_pushlstring(ctx->L,altpath,altpathlen);
            if( bs_add_path(ctx->L, -2, -1) != 0 )
                error(ctx, pt.loc.row, pt.loc.col,"cannot convert this path (1)" );
            lua_replace(ctx->L,-3);
            lua_pop(ctx->L,1);
        }else
        {
            if(*altpath == '\'')
            {
                altpath++;
                altpathlen -= 2;
            }
            lua_pushstring(ctx->L,ctx->dirpath);
            lua_pushstring(ctx->L,"/");
            lua_pushlstring(ctx->L,altpath,altpathlen);
            lua_concat(ctx->L,3);
        }
        lua_setfield(ctx->L,module,"#altmod");
    }

    lua_pushcfunction(ctx->L, bs_parse);

    if(*path == '\'')
    {
        path++;
        pathlen -= 2;
    }

    if( caclFsDir(ctx, path, pathlen) != BS_OK )
    {
        error(ctx, pt.loc.row, pt.loc.col,"error creating relative file system path" );
    } // else
    lua_setfield(ctx->L,module,"#fsrdir");

    if( *path == '/' )
    {
        lua_pushlstring(ctx->L,path,pathlen); // this is already an absolute path
    }else
    {
        // submod name = relpath
        if( *path == '.' )
        {
            // already normalized, either ./ or ../
            lua_getfield(ctx->L,ctx->module.table,"#dir");
            lua_pushlstring(ctx->L,path,pathlen);
            if( bs_add_path(ctx->L, -2, -1) != 0 )
                error(ctx, pt.loc.row, pt.loc.col,"cannot convert this path (4)" );
            lua_replace(ctx->L,-3);
            lua_pop(ctx->L,1);
        }else
        {
            lua_pushstring(ctx->L,ctx->dirpath);
            lua_pushstring(ctx->L,"/");
            lua_pushlstring(ctx->L,path,pathlen);
            lua_concat(ctx->L,3);
        }
    }
    const int newPath = lua_gettop(ctx->L);

    lua_pushvalue(ctx->L,ctx->module.table);
    while( !lua_isnil(ctx->L,-1) )
    {
        // if path is already present then this module is called recursively, i.e. indefinitely
        lua_getfield(ctx->L,-1,"#dir");
        if( lua_equal(ctx->L,newPath,-1) )
            error(ctx, pt.loc.row, pt.loc.col,"path points to the same directory as current or outer module" );
        lua_pop(ctx->L,1);
        lua_getfield(ctx->L,-1,"^");
        lua_replace(ctx->L,-2);
    }
    lua_pop(ctx->L,1);

    lua_pushvalue(ctx->L,module);

    lua_pushvalue(ctx->L,BS_Params);

    lua_call(ctx->L,3,1); // call bs_parse
    lua_pop(ctx->L,1); // module returned by bs_parse (the same as handed in)

    lua_getfield(ctx->L, ctx->module.table, "#inst"); // the instance of the outer table
    lua_pushlstring(ctx->L,id.name,id.len);
    lua_getfield(ctx->L, module, "#inst"); // the instance of the nested table
    lua_rawset(ctx->L, -3 ); // outer inst points to nested inst by name

    lua_pop(ctx->L,2); // module, outer inst

    BS_END_LUA_FUNC(ctx);
}

static void macrodef(BSParserContext* ctx)
{
    BS_BEGIN_LUA_FUNC(ctx,0);
    nextToken(ctx); // keyword
    BSIdentDef id = identdef(ctx,&ctx->module);

    lua_createtable(ctx->L,0,0);
    const int decl = lua_gettop(ctx->L);
    lua_pushinteger(ctx->L,BS_MacroDef);
    lua_setfield(ctx->L,decl,"#kind");
    lua_pushstring(ctx->L,ctx->label);
    lua_setfield(ctx->L,decl,"#source");
    addToScope(ctx, &ctx->module, &id, decl );
    addLocInfo(ctx,id.loc,decl);
    addXref(ctx, id.loc, decl);
    addNumRef(ctx,decl);

    BSToken t = nextToken(ctx);
    if( t.tok == Tok_Lpar )
    {
        // args
        BSToken lpar = t;
        t = nextToken(ctx);
        int n = 0;
        while( t.tok != Tok_Rpar )
        {
            if( t.tok == Tok_Eof )
                error(ctx, lpar.loc.row, lpar.loc.col,"non-terminated argument list" );
            if( t.tok == Tok_ident )
            {
                lua_pushlstring(ctx->L, t.val, t.len);
                const int name = lua_gettop(ctx->L);
                lua_getfield(ctx->L,decl,lua_tostring(ctx->L,name));
                // check for duplicates
                if( !lua_isnil(ctx->L,-1) )
                    error(ctx, t.loc.row, t.loc.col,"duplicate argument name" );
                else
                    lua_pop(ctx->L,1);

                lua_pushvalue(ctx->L,name);
                lua_pushinteger(ctx->L,++n);
                lua_rawset(ctx->L,decl);

                lua_pushvalue(ctx->L,name);
                lua_rawseti(ctx->L,decl,n);

                lua_pop(ctx->L,1); // name
            }else if( t.tok == Tok_Comma )
                ; // ignore
            else
                error(ctx, t.loc.row, t.loc.col,"expecting an identifier or ')'" );

            t = nextToken(ctx);
        }
        t = nextToken(ctx);
    }
    if( t.tok != Tok_Lbrace )
        error(ctx, t.loc.row, t.loc.col,"expecting '{'" );
    BSToken lbrace = t;
    lua_pushinteger(ctx->L,lbrace.loc.row);
    lua_setfield(ctx->L,decl,"#brow");
    lua_pushinteger(ctx->L,lbrace.loc.col);
    lua_setfield(ctx->L,decl,"#bcol");
    int n = 0;
    while(1)
    {
        // TODO: should check syntax already here?
        // i.e. that only { ( subdirectory | declaration | statement ) [';'] } appears
        t = bslex_hnext(ctx->lex);
        if( t.tok == Tok_Lbrace )
            n++;
        else if( t.tok == Tok_Rbrace )
        {
            if( n == 0 )
                break;
            n--;
        }else if( t.tok == Tok_Eof )
            error(ctx, lbrace.loc.row, lbrace.loc.col,"non-terminated macro body" );
        else if( t.tok == Tok_Invalid )
        {
            lua_pushnil(ctx->L);
            lua_error(ctx->L);
        }
    }
    assert( t.tok == Tok_Rbrace );
    lua_pushlstring(ctx->L, lbrace.val, t.val-lbrace.val+1); // include { and } in code fragment
    lua_setfield(ctx->L,decl,"#code");

    lua_pop(ctx->L,1); // decl

    BS_END_LUA_FUNC(ctx);
}

static void goforthis(BSParserContext* ctx, BSScope* scope)
{
    BS_BEGIN_LUA_FUNC(ctx,1);
    lua_pushvalue(ctx->L,scope->table);
    const int curScope = lua_gettop(ctx->L);
    lua_getfield(ctx->L, curScope, "#this" );
    // stack: def, this or nil

    // continue search to surrounding (local) scope (if present)
    while( lua_isnil(ctx->L, -1) )
    {
        lua_pop(ctx->L,1); // remove nil
        // stack: old def
        lua_getfield(ctx->L, curScope, "#up");
        // stack: old def, new def or nil
        if( lua_isnil(ctx->L, -1) )
            break;
        lua_replace(ctx->L,curScope);
        // stack: new def
        lua_getfield(ctx->L, curScope, "#this");
        // stack: new def, this or nil
    }
    // stack: def, this or nil
    lua_replace(ctx->L,curScope);
    BS_END_LUA_FUNC(ctx);
}
